grid ratios corrected, indicator whitespace and font fixed
Former-commit-id: 089a4f6c37aa3c98ee56178fd7225129ca18e748

--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -1,4 +1,5 @@
 body {
+  font-size: 1rem;
   margin: 0;
   padding: 0;
   background-color: #f9f9f9;
@@ -96,16 +97,20 @@ input {
   text-align: center;
 }
 
+#tabs > a:first-child {
+  border-right: 1px solid lightgrey;
+}
+
+#tabs > a:last-child {
+  border-left: 1px solid lightgrey;
+}
+
 #tabs > a::after {
   content:''; 
   width:1px; 
   height:90%; 
   background:lightgrey; 
   position:relative;
-}
-
-#tab:last-child {
-
 }
 
 button {
@@ -164,11 +169,16 @@ table {
 
 .indicator {
   flex: 1;
-
+  padding: 2rem;
 }
 
 .indicator_value{
   font-size: 2rem;
+  margin: 1rem 0;
+}
+
+.indicator_value p {
+  margin: 1rem 0;
 }
 
 ::-webkit-scrollbar {
@@ -252,7 +262,7 @@ table {
     margin-left: auto;
     margin-right: auto;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: auto 1fr 1fr 1fr 1fr auto;
   }
 
   #new_opportunity {
@@ -267,8 +277,8 @@ table {
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
     -ms-grid-row: 2;
-    -ms-grid-row-span: 5;
-    grid-row: 2 / 7;
+    -ms-grid-row-span: 4;
+    grid-row: 2 / 6;
   }
 
   #opportunity_indicators {
@@ -282,26 +292,26 @@ table {
     -ms-grid-column-span: 4;
     grid-column: 3 / 7;
     -ms-grid-row: 3;
-    -ms-grid-row-span: 4;
-    grid-row: 3 / 7;
+    -ms-grid-row-span: 3;
+    grid-row: 3 / 6;
   }
 
   #top_open_container {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1 / 4;
-    -ms-grid-row: 7;
-    -ms-grid-row-span: 4;
-    grid-row: 7 / 11;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 5;
+    grid-row: 6 / 11;
   }
 
   #top_lost_container {
     -ms-grid-column: 4;
     -ms-grid-column-span: 3;
     grid-column: 4 / 7;
-    -ms-grid-row: 7;
-    -ms-grid-row-span: 4;
-    grid-row: 7 / 11;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 5;
+    grid-row: 6 / 11;
   }
 
   #cases_grid {
